Comment out unneeded apps/services for now

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -23,23 +23,23 @@ resources:
  #- argocd/namespaces/namespace-metal-provisioner.yaml
  
  # Ansible Automation Platform
- - argocd/namespaces/namespace-ansible-automation-platform.yaml
+#  - argocd/namespaces/namespace-ansible-automation-platform.yaml
  
  # Openshift Advanced Cluster Security
- - argocd/namespaces/namespace-openshift-acs.yaml
+#  - argocd/namespaces/namespace-openshift-acs.yaml
 
   # Quay Registry
- - argocd/namespaces/namespace-quay-registry.yaml
+#  - argocd/namespaces/namespace-quay-registry.yaml
  
  # OpenShift Data Foundation aka OpenShift Container Storage
  #- unneeded for IBM Cloud ROKS with ODF add-on configured
- - argocd/namespaces/namespace-openshift-storage.yaml
- - argocd/storage.yaml
+#  - argocd/namespaces/namespace-openshift-storage.yaml
+#  - argocd/storage.yaml
  
  # MachineSets and Infra Nodes
  #- unneeded for IBM Cloud ROKS with ODF add-on configured
- - argocd/machinesets.yaml
- - argocd/infraconfig.yaml
+#  - argocd/machinesets.yaml
+#  - argocd/infraconfig.yaml
 
  ## Optional Components. These are NOT required for OTP, but can be enabled.
 
