--- a/0-bootstrap/hub/1-infra/argocd/namespaces/crossplane/operator/namespace-upbound.yaml
+++ b/0-bootstrap/hub/1-infra/argocd/namespaces/crossplane/operator/namespace-upbound.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: namespace-crossplane
+  name: namespace-upbound
   namespace: openshift-gitops
   labels:
     gitops.tier.layer: infra
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   project: infra
   source:
-    path: namespaces/crossplane
+    path: namespaces/crossplane/operator
   syncPolicy:
     automated:
       prune: true
