--- a/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/deploy/crossplane.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/deploy/crossplane.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane-operator
+  name: crossplane-helm
   annotations:
     argocd.argoproj.io/sync-wave: "200"
   labels:
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   project: services
   source:
-    path: operators/crossplane/helm
+    path: instances/crossplane/helm/deploy
   syncPolicy:
     automated:
       prune: true
