--- a/0-bootstrap/hub/2-services/argocd/operators/crossplane/crossplane.yaml
+++ b/0-bootstrap/hub/2-services/argocd/operators/crossplane/crossplane.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane-helm-rbac
+  name: crossplane-operator
   annotations:
     argocd.argoproj.io/sync-wave: "200"
   labels:
@@ -9,11 +9,11 @@ metadata:
     gitops.tier.layer: services
 spec:
   destination:
-    namespace: crossplane-system
+    namespace: upbound-system
     server: https://kubernetes.default.svc
   project: services
   source:
-    path: instances/crossplane/helm/rbac
+    path: operators/crossplane
   syncPolicy:
     automated:
       prune: true
