--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 #  - argocd/instances/crossplane/helm/rbac/rbac.yaml
 
  ## OperatorHub
- - argocd/operators/crossplane/crossplane.yaml
+#  - argocd/operators/crossplane/crossplane.yaml
 
 
  # Red Hat Advanced Cluster Management
