--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -13,7 +13,12 @@ resources:
  - argocd/namespaces/crossplane/helm/namespace-crossplane.yaml
 
  ## Namespace Upbound - Operator
- - argocd/namespaces/crossplane/operator/namespace-upbound.yaml
+#  - argocd/namespaces/crossplane/operator/namespace-upbound.yaml
+
+ ## RBAC
+
+ ### AWS
+ - argocd/namespaces/crossplane/providers/aws/rbac-aws-provider.yaml
 
  # External Secrets
  - argocd/rbac/rbac-external-secrets.yaml
