add external secrets operator and instance

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -31,8 +31,8 @@ resources:
 #  - argocd/operators/quay-bridge-operator.yaml
 
  # Secrets Managment
-#  - argocd/operators/external-secrets.yaml
-#  - argocd/instances/external-secrets.yaml
+ - argocd/operators/external-secrets.yaml
+ - argocd/instances/external-secrets.yaml
 
  # Ansible Automation Platform
 #  - argocd/operators/ansible-automation-platform-operator.yaml
