Added kustomize entry for provider config but commented out for now

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -4,8 +4,13 @@ resources:
  # Crossplane
 
  ## Helm
+
+ ### Deploy
  - argocd/instances/crossplane/helm/deploy/crossplane.yaml
  - argocd/instances/crossplane/helm/rbac/rbac.yaml
+
+ ### PostDeploy
+#  - argocd/instances/crossplane/helm/postdeploy/provider-configuraton.yaml
 
  ## OperatorHub
 #  - argocd/operators/crossplane/crossplane.yaml
