Added kustomize entry for aws runtimes

--- a/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/runtime/aws/providerconfig.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/runtime/aws/providerconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane-aws-provider
+  name: crossplane-aws-providerconfig
   annotations:
     argocd.argoproj.io/sync-wave: "230"
   labels:
