Allow crossplane group resources for services repo

--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -78,6 +78,10 @@ spec:
     server: https://kubernetes.default.svc
   clusterResourceWhitelist:
   # TODO: SCC needs to be moved to 1-infra, here for now for artifactory
+  - group: "pkg.crossplane.io"
+    kind: Provider
+  - group: "aws.crossplane.io/v1beta1"
+    kind: ProviderConfig
   - group: "security.openshift.io"
     kind: SecurityContextConstraints
   - group: "console.openshift.io"
