--- a/setup/setup/3_custom-argocd-app-controller-clusterrole.yaml
+++ b/setup/setup/3_custom-argocd-app-controller-clusterrole.yaml
@@ -6,6 +6,18 @@ rules:
   - verbs:
       - '*'
     apiGroups:
+      - aws.crossplane.io
+    resources:
+      - '*'
+  - verbs:
+      - '*'
+    apiGroups:
+      - pkg.crossplane.io
+    resources:
+      - '*'
+  - verbs:
+      - '*'
+    apiGroups:
       - ''
     resources:
       - pods
