Added example app for bucket

--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -82,6 +82,8 @@ spec:
     kind: Provider
   - group: "aws.crossplane.io"
     kind: ProviderConfig
+  - group: "s3.aws.crossplane.io"
+    kind: Bucket
   - group: "security.openshift.io"
     kind: SecurityContextConstraints
   - group: "console.openshift.io"
