--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -21,6 +21,12 @@ resources:
  - argocd/rbac/crossplane/providers/aws/rbac-aws-provider.yaml
  - argocd/rbac/crossplane/providers/aws/job/configure-job.yaml
 
+ # Backstage
+ - argocd/namespaces/backstage/namespace-backstage.
+
+ # Sealed Secrets
+ - argocd/secrets/sealed-secrets.yaml
+
  # External Secrets
  - argocd/rbac/rbac-external-secrets.yaml
  - argocd/namespaces/namespace-external-secrets.yaml
