--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -22,7 +22,7 @@ resources:
  - argocd/rbac/crossplane/providers/aws/job/configure-job.yaml
 
  # Backstage
- - argocd/namespaces/backstage/namespace-backstage.
+ - argocd/namespaces/backstage/namespace-backstage.yaml
 
  # Sealed Secrets
  - argocd/secrets/sealed-secrets.yaml
