--- a/0-bootstrap/hub/1-infra/1-infra.yaml
+++ b/0-bootstrap/hub/1-infra/1-infra.yaml
@@ -12,6 +12,8 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: crossplane-system
     server: https://kubernetes.default.svc
+  - namespace: backstage
+    server: https://kubernetes.default.svc
   - namespace: ci
     server: https://kubernetes.default.svc
   - namespace: dev
