--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -14,6 +14,8 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: crossplane-system
     server: https://kubernetes.default.svc
+  - namespace: backstage
+    server: https://kubernetes.default.svc
   - namespace: kube-system
     server: https://kubernetes.default.svc 
   - namespace: tools
