--- a/0-bootstrap/hub/2-services/argocd/instances/backstage/backstage/backstage.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/backstage/backstage/backstage.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: backstage-postgresql
+  name: backstage
   annotations:
     argocd.argoproj.io/sync-wave: "250"
   labels:
