added backstage app to kustoimze

--- a/0-bootstrap/hub/5-apps/kustomization.yaml
+++ b/0-bootstrap/hub/5-apps/kustomization.yaml
@@ -26,6 +26,10 @@ resources:
  ## An example has been provided
  #- argocd/cloudpaks/cp4i/cp4i.yaml
  
+ ## Backstage
+
+ ### Backstage - Demo
+ - argocd/backstage-apps/demo/backstage-app.yaml
 
 patches:
 - target:
