Added tekton namespace app

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -32,6 +32,9 @@ resources:
  - argocd/rbac/rbac-external-secrets.yaml
  - argocd/namespaces/namespace-external-secrets.yaml
 
+ # Tekton
+ - argocd/namespaces/tekton/namespace-tekton.yaml
+
  # Red Hat Advanced Cluster Management
  - argocd/rbac/rbac-rhacm.yaml
  - argocd/namespaces/namespace-openshift-acm.yaml
