--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -59,6 +59,7 @@ resources:
  ## Tekton - Backstage pipeline
  - argocd/instances/tekton/backstage/pipeline/pipeline.yaml
  - argocd/instances/tekton/backstage/trigger/trigger.yaml
+ - argocd/instances/tekton/backstage/eventlistener/event-listener.yaml
 
  # Ansible Automation Platform
 #  - argocd/operators/ansible-automation-platform-operator.yaml
