Re enabled dev app

--- a/0-bootstrap/hub/5-apps/kustomization.yaml
+++ b/0-bootstrap/hub/5-apps/kustomization.yaml
@@ -29,7 +29,7 @@ resources:
  ## Backstage
 
  ### Backstage - Demo
-#  - argocd/backstage-apps/demo/backstage-app.yaml
+ - argocd/backstage-apps/demo/backstage-app.yaml
 
 patches:
 - target:
