Added xr to deny list

--- a/0-bootstrap/hub/5-apps/5-apps.yaml
+++ b/0-bootstrap/hub/5-apps/5-apps.yaml
@@ -13,6 +13,9 @@ spec:
   clusterResourceWhitelist:
   - group: '*'
     kind: '*'
+  clusterResourceBlacklist:
+  - group: '*'
+    kind: 'Composite*'
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
