Added xr to deny list

--- a/0-bootstrap/hub/5-apps/5-apps.yaml
+++ b/0-bootstrap/hub/5-apps/5-apps.yaml
@@ -14,8 +14,8 @@ spec:
   - group: '*'
     kind: '*'
   clusterResourceBlacklist:
-  - group: '*'
-    kind: 'Composite*'
+  - group: 'apac.catalyst.project.idp'
+    kind: '*'
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
