--- a/0-bootstrap/hub/2-services/argocd/instances/backstage/backstage/backstage-dev.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/backstage/backstage/backstage-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: backstage
+  name: backstage-dev
   annotations:
     argocd.argoproj.io/sync-wave: "320"
   labels:
