feat: seperate backstage dev application spec

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
 
  # Backstage
  - argocd/namespaces/backstage/namespace-backstage.yaml
+ - argocd/namespaces/backstage/namespace-backstage-dev.yaml
 
  # Sealed Secrets
  - argocd/namespaces/namespace-sealed-secrets.yaml
