--- a/0-bootstrap/hub/1-infra/1-infra.yaml
+++ b/0-bootstrap/hub/1-infra/1-infra.yaml
@@ -16,6 +16,8 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: backstage
     server: https://kubernetes.default.svc
+  - namespace: backstage-dev
+    server: https://kubernetes.default.svc
   - namespace: ci
     server: https://kubernetes.default.svc
   - namespace: dev
