Deploy aws-cicd

--- a/0-bootstrap/hub/4-clusters/kustomization.yaml
+++ b/0-bootstrap/hub/4-clusters/kustomization.yaml
@@ -28,7 +28,7 @@ resources:
  ## Example : - argocd/<env>/<cloud>/<clustername>/<clustername.yaml>
 
  ### AWS
- #- argocd/clusters/cicd/aws/aws-cicd/aws-cicd.yaml
+ - argocd/clusters/cicd/aws/aws-cicd/aws-cicd.yaml
  #- argocd/clusters/dev/aws/aws-dev/aws-dev.yaml
  #- argocd/clusters/prod/aws/aws-prod/aws-prod.yaml
  
