--- a/0-bootstrap/hub/4-clusters/argocd/clusters/cicd/aws/aws-cicd/aws-cicd.yaml
+++ b/0-bootstrap/hub/4-clusters/argocd/clusters/cicd/aws/aws-cicd/aws-cicd.yaml
@@ -27,6 +27,7 @@ spec:
         managedCluster: 
           status: "enabled" # Valid values "enabled" or "disabled"
           managedRepo: https://github.com/ce-apac-project-idp/otp-gitops.git # Repository that will be used to manage the Cluster resources
+          managedRepoBranch: main # Branch to use
           environment:  cicd # Typically this would be dev, test, cicd, prod
           projectName:  project-cicd # This could be a project, line of business, anything that makes sense to you. This references the folder name
                         # within the "environment" folder
