--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -142,6 +142,8 @@ spec:
     kind: ClusterSecretStore
   - group: "hive.openshift.io"
     kind: HiveConfig
+  - group: "multicluster.openshift.io"
+    kind: MultiClusterEngine
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
