Temporarily remove RHACM Observability

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -32,7 +32,7 @@ resources:
  # Red Hat Advanced Cluster Management
  - argocd/operators/openshift-acm.yaml
  - argocd/instances/openshift-acm-instance.yaml
- - argocd/instances/openshift-acm-observability-instance.yaml
+ #- argocd/instances/openshift-acm-observability-instance.yaml
  - argocd/instances/openshift-gitopscluster-instance.yaml
  # Red Hat Advanced Cluster Management - Central Infrastructure Management
  - argocd/instances/openshift-acm-cim.yaml
