--- a/0-bootstrap/hub/4-clusters/argocd/clusterclaims/cicd/aws/project-cicd.yaml
+++ b/0-bootstrap/hub/4-clusters/argocd/clusterclaims/cicd/aws/project-cicd.yaml
@@ -28,5 +28,6 @@ spec:
         managedCluster: 
           status: "enabled"
           managedRepo: https://github.com/testing-gitops/otp-gitops.git
+          managedRepoBranch: main
           environment: cicd
           projectName: project-cicd
