de-provisioning acs namespace

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -50,7 +50,7 @@ resources:
 #  - argocd/namespaces/namespace-ansible-automation-platform.yaml
  
  # Openshift Advanced Cluster Security
- - argocd/namespaces/namespace-openshift-acs.yaml
+# - argocd/namespaces/namespace-openshift-acs.yaml
 
   # Quay Registry
 #  - argocd/namespaces/namespace-quay-registry.yaml
