--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -70,7 +70,7 @@ resources:
 #  - argocd/instances/ansible-automation-platform-hub-instance.yaml
 
  # OpenShift Advanced Cluster Security (aka Stackrox)
-# - argocd/operators/openshift-acs-operator.yaml
+ - argocd/operators/openshift-acs-operator.yaml
 # - argocd/instances/openshift-acs-instance.yaml
 
  ## Optional Components. These are NOT required for OTP, but can be enabled.
