--- a/0-bootstrap/hub/kustomization.yaml
+++ b/0-bootstrap/hub/kustomization.yaml
@@ -1,10 +1,10 @@
 resources:
- - 1-infra/1-infra.yaml
- - 2-services/2-services.yaml
+#  - 1-infra/1-infra.yaml
+#  - 2-services/2-services.yaml
 #  - 3-policies/3-policies.yaml
  ## Uncomment once the above layers have completed.
- - 4-clusters/4-clusters.yaml
- - 5-apps/5-apps.yaml
+#  - 4-clusters/4-clusters.yaml
+#  - 5-apps/5-apps.yaml
 
 patches:
 - target:
