--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -36,13 +36,13 @@ resources:
  - argocd/namespaces/tekton/namespace-tekton.yaml
 
  # Red Hat Advanced Cluster Management
-# - argocd/rbac/rbac-rhacm.yaml
-# - argocd/namespaces/namespace-openshift-acm.yaml
-# - argocd/namespaces/namespace-openshift-acm-observability.yaml
-# - argocd/namespaces/namespace-rhacm-credentials.yaml
-# - argocd/namespaces/namespace-policies.yaml
-# - argocd/namespaces/namespace-rhacm-clusterpools.yaml
-# - argocd/namespaces/namespace-rhacm-clusterclaims.yaml
+- argocd/rbac/rbac-rhacm.yaml
+- argocd/namespaces/namespace-openshift-acm.yaml
+- argocd/namespaces/namespace-openshift-acm-observability.yaml
+- argocd/namespaces/namespace-rhacm-credentials.yaml
+- argocd/namespaces/namespace-policies.yaml
+- argocd/namespaces/namespace-rhacm-clusterpools.yaml
+- argocd/namespaces/namespace-rhacm-clusterclaims.yaml
  # RHACM Metal Provisioner (Not required if Hub is running on Bare-Metal)
  #- argocd/namespaces/namespace-metal-provisioner.yaml
  
