--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
 #  - argocd/instances/crossplane/helm/rbac/rbac.yaml
 
  ### PostDeploy
- - argocd/instances/crossplane/helm/postdeploy/provider-configuration.yaml
+#  - argocd/instances/crossplane/helm/postdeploy/provider-configuration.yaml
 
  ### Runtime
 #  - argocd/instances/crossplane/helm/runtime/aws/provider.yaml
