Re added crossplane helm deployment app

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
  ## Helm
 
  ### Deploy
-#  - argocd/instances/crossplane/helm/deploy/crossplane.yaml
+ - argocd/instances/crossplane/helm/deploy/crossplane.yaml
 #  - argocd/instances/crossplane/helm/rbac/rbac.yaml
 
  ### PostDeploy
