--- a/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/deploy/crossplane.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/deploy/crossplane.yaml
@@ -13,7 +13,19 @@ spec:
     server: https://kubernetes.default.svc
   project: services
   source:
-    path: instances/crossplane/helm/deploy
+    helm:
+    parameters:
+      - name: securityContextCrossplane.runAsUser
+        value: null
+      - name: securityContextCrossplane.runAsGroup
+        value: null
+      - name: securityContextRBACManager.runAsUser
+        value: null
+      - name: securityContextRBACManager.runAsGroup
+        value: null
+  chart: crossplane
+  repoURL: https://charts.crossplane.io/stable
+  targetRevision: 1.10.1
   syncPolicy:
     automated:
       prune: true
