--- a/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/deploy/crossplane.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/deploy/crossplane.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     chart: crossplane
     repoURL: https://charts.crossplane.io/stable
-    targetRevision: 1.10.1
+    targetRevision: "1.10.1"
     helm:
       parameters:
         - name: securityContextCrossplane.runAsUser
