Reorganised structure of crossplane component to make more sense

--- a/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/predeploy/aws/secrets/aws-secret.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/crossplane/helm/predeploy/aws/secrets/aws-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane-helm-rbac
+  name: crossplane-predeploy-aws-secrets
   annotations:
-    argocd.argoproj.io/sync-wave: "200"
+    argocd.argoproj.io/sync-wave: "205"
   labels:
     gitops.tier.group: crossplane
     gitops.tier.layer: services
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   project: services
   source:
-    path: instances/crossplane/helm/rbac
+    path: instances/crossplane/predeploy/aws/secret
   syncPolicy:
     automated:
       prune: true
