Allow services project to deploy to openshift-rhacm-credentials namespace

--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   sourceRepos: [] # Populated by kustomize patches in 2-services/kustomization.yaml
   destinations:
+  - namespace: openshift-rhacm-credentials
+    server: https://kubernetes.default.svc
   - namespace: tekton
     server: https://kubernetes.default.svc
   - namespace: external-secrets
