Added comments where necessary re RHACM apps

--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   sourceRepos: [] # Populated by kustomize patches in 2-services/kustomization.yaml
   destinations:
-  - namespace: openshift-rhacm-credentials
+  - namespace: openshift-rhacm-credentials # Required for the "openshift-acm-discovery-instance" Argo application
     server: https://kubernetes.default.svc
   - namespace: tekton
     server: https://kubernetes.default.svc
