Added namespace for IDP Developers

--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -7,6 +7,11 @@ resources:
  # Console link
  - argocd/consolelink.yaml
 
+ # IDP
+
+ ## IDP - Namespace
+ - argocd/namespaces/idp/developers/namespace.yaml
+
  # Crossplane
 
  ## Namespace Crossplane - Helm
