--- a/0-bootstrap/hub/1-infra/1-infra.yaml
+++ b/0-bootstrap/hub/1-infra/1-infra.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   sourceRepos: [] # Populated by kustomize patches in 1-infra/kustomization.yaml
   destinations:
+  - namespace: aws-resources
+    server: https://kubernetes.default.svc
   - namespace: idp-clients
     server: https://kubernetes.default.svc
   - namespace: tekton
