Added ability to deploy resources into the aws-resources ns

--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   sourceRepos: [] # Populated by kustomize patches in 2-services/kustomization.yaml
   destinations:
+  - namespace: aws-resources
+    server: https://kubernetes.default.svc
   - namespace: openshift-rhacm-credentials # Required for the "openshift-acm-discovery-instance" Argo application
     server: https://kubernetes.default.svc
   - namespace: tekton
