--- a/0-bootstrap/hub/2-services/argocd/instances/tekton/backstage/devsecops/task/tekton-tasks.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/tekton/backstage/devsecops/task/tekton-tasks.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: backstage-tekton-tasks
+  name: backstage-devsecops-tekton-tasks
   annotations:
     argocd.argoproj.io/sync-wave: "270"
   labels:
